<resources>
    <string name="app_name">LabQAr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="item1">Overview</string>
    <string name="item2">Medições</string>
    <string name="item3">Informações</string>
    <string name="item4">Definições</string>
    <string name="item5">Sair</string>


    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_measurements">Medições</string>
    <string name="title_activity_about">Sobre</string>
    <string name="title_activity_settings">Definições</string>

    <string name="title_activity_graphic">Gráfico Poluente</string>
    <string name="title_activity_login">Log in</string>

    <string name="dialog_message">Tem a certeza que pretende sair?</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="quality">Classificação global do estado do ar</string>
    <string name="chart_title">Variação nas Últimas 24h Medidas</string>
    <string name="dialog_retry">Tentar</string>
    <string name="title_activity_graphic__index">Gráfico Índice</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="item6">Tutorial</string>
    <string name="title_activity_alerts">Alertas</string>
    <string name="item7">Alertas</string>
</resources>
